--- a/Window.fmx
+++ b/Window.fmx
@@ -2,10 +2,11 @@ object Form2: TForm2
   Left = 0
   Top = 0
   Caption = 'S'
-  ClientHeight = 480
-  ClientWidth = 640
+  ClientHeight = 720
+  ClientWidth = 1080
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = OpenGame
   DesignerMasterStyle = 0
 end
