--- a/Window.Windows.fmx
+++ b/Window.Windows.fmx
@@ -1,13 +1,18 @@
 inherited Form2_Windows: TForm2_Windows
   DesignerMasterStyle = 0
-  inherited CharacterPanel: TImage [0]
-    MultiResBitmap.Height = 167
-    MultiResBitmap.Width = 167
-    MultiResBitmap.TransparentColor = 2763429
-    Position.Y = 40.000000000000000000
-  end
-  inherited Map: TLayout [1]
+  inherited Map: TLayout
     Position.X = -40.000000000000000000
     Position.Y = -40.000000000000000000
+  end
+  inherited RightMenu: TLayout
+    Position.Y = 24.000000000000000000
+    inherited BG: TPanel
+      Position.Y = 280.000000000000000000
+    end
+    inherited CharacterPanel: TImage
+      MultiResBitmap.Height = 167
+      MultiResBitmap.Width = 167
+      MultiResBitmap.TransparentColor = 2763429
+    end
   end
 end
