--- a/Window.fmx
+++ b/Window.fmx
@@ -48,23 +48,57 @@ object Form2: TForm2
       Size.PlatformDefault = False
       object OP: TLabel
         Position.X = 136.000000000000000000
-        Position.Y = 112.000000000000000000
+        Position.Y = 122.000000000000000000
         Text = '00'
         TabOrder = 1
       end
       object OPLabel: TLabel
         Position.X = 8.000000000000000000
-        Position.Y = 112.000000000000000000
+        Position.Y = 122.000000000000000000
         Text = #1054#1095#1082#1080' '#1087#1077#1088#1077#1076#1074#1080#1078#1077#1085#1080#1103
         TabOrder = 2
       end
-      object OPButton: TButton
-        Position.X = 10.000000000000000000
-        Position.Y = 137.000000000000000000
+      object Skill1Buton: TButton
+        Position.X = 8.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 80.000000000000000000
+        Size.Height = 49.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 6
+        Text = #1057#1082#1080#1083'1'
+        TextSettings.Trimming = None
+      end
+      object Skill2Button: TButton
+        Position.X = 120.000000000000000000
+        Position.Y = 8.000000000000000000
+        Size.Width = 80.000000000000000000
+        Size.Height = 49.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 5
+        Text = #1057#1082#1080#1083'2'
+        TextSettings.Trimming = None
+      end
+      object AttackButton: TButton
+        Position.X = 64.000000000000000000
+        Position.Y = 65.000000000000000000
+        Size.Width = 80.000000000000000000
+        Size.Height = 49.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 4
+        Text = #1040#1090#1072#1082#1072
+        TextSettings.Trimming = None
+        OnClick = AttackButtonClick
+      end
+      object MPButton: TButton
+        Position.X = 8.000000000000000000
+        Position.Y = 147.000000000000000000
+        Size.Width = 80.000000000000000000
+        Size.Height = 30.000000000000000000
+        Size.PlatformDefault = False
         TabOrder = 3
         Text = #1050#1091#1087#1080#1090#1100' '#1054#1055
         TextSettings.Trimming = None
-        OnClick = OPButtonClick
+        OnClick = MPButonClick
       end
     end
   end
