--- a/Window.fmx
+++ b/Window.fmx
@@ -236,4 +236,33 @@ object Form2: TForm2
       end
     end
   end
+  object WinPanel: TPanel
+    Align = Center
+    Size.Width = 425.000000000000000000
+    Size.Height = 224.000000000000000000
+    Size.PlatformDefault = False
+    Visible = False
+    TabOrder = 9
+    object WinnerText: TLabel
+      Align = Top
+      StyledSettings = [Family, Style, FontColor]
+      Size.Width = 425.000000000000000000
+      Size.Height = 33.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Size = 20.000000000000000000
+      TextSettings.HorzAlign = Center
+      Text = #1055#1086#1073#1077#1076#1080#1083' '#1080#1075#1088#1086#1082
+      TabOrder = 0
+    end
+    object WinnerIndicator: TImage
+      MultiResBitmap = <
+        item
+        end>
+      Align = Top
+      Position.Y = 33.000000000000000000
+      Size.Width = 425.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+    end
+  end
 end
