--- a/Window.Windows.fmx
+++ b/Window.Windows.fmx
@@ -11,4 +11,8 @@ inherited Form2_Windows: TForm2_Windows
       MultiResBitmap.TransparentColor = 2763429
     end
   end
+  inherited MusicPlayer: TMediaPlayer [7]
+  end
+  inherited AudioLooper: TTimer [8]
+  end
 end
