--- a/Window.fmx
+++ b/Window.fmx
@@ -62,13 +62,13 @@ object Form2: TForm2
         Position.X = 136.000000000000000000
         Position.Y = 122.000000000000000000
         Text = '00'
-        TabOrder = 1
+        TabOrder = 4
       end
       object OPLabel: TLabel
         Position.X = 8.000000000000000000
         Position.Y = 122.000000000000000000
-        Text = #1054#1095#1082#1080' '#1087#1077#1088#1077#1076#1074#1080#1078#1077#1085#1080#1103
-        TabOrder = 2
+        Text = #1054#1095#1082#1080' '#1087#1077#1088#1077#1076#1074#1080#1078#1077#1085#1080#1103':'
+        TabOrder = 10
       end
       object Skill1Button: TButton
         Position.X = 8.000000000000000000
@@ -76,9 +76,11 @@ object Form2: TForm2
         Size.Width = 80.000000000000000000
         Size.Height = 49.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 6
+        TabOrder = 14
         Text = #1057#1082#1080#1083'1'
         TextSettings.Trimming = None
+        ParentShowHint = False
+        ShowHint = True
         OnClick = Skill1ButtonClick
       end
       object Skill2Button: TButton
@@ -87,9 +89,11 @@ object Form2: TForm2
         Size.Width = 80.000000000000000000
         Size.Height = 49.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 5
+        TabOrder = 13
         Text = #1057#1082#1080#1083'2'
         TextSettings.Trimming = None
+        ParentShowHint = False
+        ShowHint = True
         OnClick = Skill2ButtonClick
       end
       object AttackButton: TButton
@@ -98,21 +102,72 @@ object Form2: TForm2
         Size.Width = 80.000000000000000000
         Size.Height = 49.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 4
+        TabOrder = 12
         Text = #1040#1090#1072#1082#1072
         TextSettings.Trimming = None
+        ParentShowHint = False
+        ShowHint = True
         OnClick = AttackButtonClick
       end
       object MPButton: TButton
-        Position.X = 8.000000000000000000
-        Position.Y = 147.000000000000000000
+        Position.Y = 155.000000000000000000
         Size.Width = 80.000000000000000000
         Size.Height = 30.000000000000000000
         Size.PlatformDefault = False
-        TabOrder = 3
+        TabOrder = 11
         Text = #1050#1091#1087#1080#1090#1100' '#1054#1055
         TextSettings.Trimming = None
+        ParentShowHint = False
+        ShowHint = False
         OnClick = MPButonClick
+      end
+      object SpeedLabel: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 200.000000000000000000
+        Text = #1057#1082#1086#1088#1086#1089#1090#1100':'
+        TabOrder = 9
+      end
+      object HPLabel: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 220.000000000000000000
+        Text = #1047#1076#1086#1088#1086#1074#1100#1077':'
+        TabOrder = 8
+      end
+      object ArmorLabel: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 240.000000000000000000
+        Text = #1041#1088#1086#1085#1103':'
+        TabOrder = 7
+      end
+      object Speed: TLabel
+        Position.X = 136.000000000000000000
+        Position.Y = 200.000000000000000000
+        Text = '00'
+        TabOrder = 3
+      end
+      object Hp: TLabel
+        Position.X = 136.000000000000000000
+        Position.Y = 220.000000000000000000
+        Text = '00'
+        TabOrder = 2
+      end
+      object Armor: TLabel
+        Position.X = 136.000000000000000000
+        Position.Y = 240.000000000000000000
+        Text = '00'
+        TabOrder = 1
+      end
+      object BonusDicesLabel: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 260.000000000000000000
+        Text = #1041#1086#1085#1091#1089#1085#1099#1077' '#1082#1091#1073#1099':'
+        TabOrder = 6
+      end
+      object BonusDices: TLabel
+        Position.X = 8.000000000000000000
+        Position.Y = 280.000000000000000000
+        Text = '-'
+        TabOrder = 5
       end
     end
     object PlacerPanel: TLayout
@@ -334,6 +389,10 @@ object Form2: TForm2
     object WinPlayer: TMediaPlayer
       Left = 368
       Top = 176
+    end
+    object EscPlayer: TMediaPlayer
+      Left = 304
+      Top = 424
     end
   end
 end
