--- a/Window.fmx
+++ b/Window.fmx
@@ -246,6 +246,49 @@ object Form2: TForm2
       TextSettings.Trimming = None
       OnClick = StartGame
     end
+    object ErrorPanel: TPanel
+      Align = Center
+      Size.Width = 800.000000000000000000
+      Size.Height = 500.000000000000000000
+      Size.PlatformDefault = False
+      Visible = False
+      TabOrder = 1
+      object NoCharError: TLabel
+        StyledSettings = [Family, Style, FontColor]
+        Position.Y = 230.000000000000000000
+        Size.Width = 800.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 30.000000000000000000
+        TextSettings.HorzAlign = Center
+        Text = #1057#1087#1080#1089#1086#1082' '#1076#1086#1089#1090#1091#1087#1085#1099#1093' '#1087#1077#1088#1089#1086#1085#1072#1078#1077#1081' '#1087#1091#1089#1090
+        Visible = False
+        TabOrder = 2
+      end
+      object NoMapsError: TLabel
+        StyledSettings = [Family, Style, FontColor]
+        Position.Y = 278.000000000000000000
+        Size.Width = 800.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 30.000000000000000000
+        TextSettings.HorzAlign = Center
+        Text = #1057#1087#1080#1089#1086#1082' '#1076#1086#1089#1090#1091#1087#1085#1099#1093' '#1082#1072#1088#1090' '#1087#1091#1089#1090
+        Visible = False
+        TabOrder = 1
+      end
+      object ErrorHeader: TLabel
+        StyledSettings = [Family, Style, FontColor]
+        Position.Y = 168.000000000000000000
+        Size.Width = 800.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 30.000000000000000000
+        TextSettings.HorzAlign = Center
+        Text = #1042#1086#1079#1085#1080#1082#1083#1072' '#1086#1096#1080#1073#1082#1072' '#1087#1088#1080' '#1079#1072#1087#1091#1089#1082#1077
+        TabOrder = 0
+      end
+    end
   end
   object PrepairLayout: TLayout
     Align = Client
