--- a/Window.fmx
+++ b/Window.fmx
@@ -279,6 +279,14 @@ object Form2: TForm2
       TextSettings.Trimming = None
       OnClick = StartGame
     end
+    object GameExiter: TButton
+      Align = Center
+      Margins.Top = 50.000000000000000000
+      TabOrder = 0
+      Text = #1042#1099#1081#1090#1080
+      TextSettings.Trimming = None
+      OnClick = GameExiterClick
+    end
     object ErrorPanel: TPanel
       Align = Center
       Size.Width = 800.000000000000000000
@@ -296,7 +304,7 @@ object Form2: TForm2
         TextSettings.HorzAlign = Center
         Text = #1057#1087#1080#1089#1086#1082' '#1076#1086#1089#1090#1091#1087#1085#1099#1093' '#1087#1077#1088#1089#1086#1085#1072#1078#1077#1081' '#1087#1091#1089#1090
         Visible = False
-        TabOrder = 3
+        TabOrder = 4
       end
       object NoMapsError: TLabel
         StyledSettings = [Family, Style, FontColor]
@@ -308,7 +316,7 @@ object Form2: TForm2
         TextSettings.HorzAlign = Center
         Text = #1057#1087#1080#1089#1086#1082' '#1076#1086#1089#1090#1091#1087#1085#1099#1093' '#1082#1072#1088#1090' '#1087#1091#1089#1090
         Visible = False
-        TabOrder = 2
+        TabOrder = 3
       end
       object ErrorHeader: TLabel
         StyledSettings = [Family, Style, FontColor]
@@ -333,14 +341,18 @@ object Form2: TForm2
         Visible = False
         TabOrder = 0
       end
-    end
-    object GameExiter: TButton
-      Align = Center
-      Margins.Top = 50.000000000000000000
-      TabOrder = 0
-      Text = #1042#1099#1081#1090#1080
-      TextSettings.Trimming = None
-      OnClick = GameExiterClick
+      object NoParametrsError: TLabel
+        StyledSettings = [Family, Style, FontColor]
+        Position.Y = 325.000000000000000000
+        Size.Width = 800.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Size = 30.000000000000000000
+        TextSettings.HorzAlign = Center
+        Text = #1053#1077' '#1087#1086#1083#1091#1095#1080#1083#1086#1089#1100' '#1079#1072#1075#1088#1091#1079#1080#1090#1100' '#1087#1072#1088#1072#1084#1077#1090#1088#1099' '#1080#1075#1088#1099
+        Visible = False
+        TabOrder = 2
+      end
     end
   end
   object PrepairLayout: TLayout
