--- a/Window.Windows.fmx
+++ b/Window.Windows.fmx
@@ -15,12 +15,10 @@ inherited Form2_Windows: TForm2_Windows
     end
   end
   inherited MainMenu: TLayout
-    inherited ErrorPanel: TPanel [1]
+    inherited ErrorPanel: TPanel
       inherited ErrorHeader: TLabel
         Position.X = 16.000000000000000000
       end
-    end
-    inherited GameExiter: TButton [2]
     end
   end
 end
