--- a/Window.Windows.fmx
+++ b/Window.Windows.fmx
@@ -1,9 +1,13 @@
 inherited Form2_Windows: TForm2_Windows
   DesignerMasterStyle = 0
-  inherited KeyPressTimer: TTimer [0]
-  end
-  inherited RightMenu: TLayout [1]
-    inherited CharacterPanel: TImage [0]
+  inherited RightMenu: TLayout
+    inherited BG: TImage
+      MultiResBitmap.Height = 1080
+      MultiResBitmap.Width = 564
+      BitmapMargins.Top = -10.000000000000000000
+      Scale.Y = 1.500000000000000000
+    end
+    inherited CharacterPanel: TImage
       MultiResBitmap.Height = 167
       MultiResBitmap.Width = 167
       MultiResBitmap.TransparentColor = 2763429
@@ -11,20 +15,8 @@ inherited Form2_Windows: TForm2_Windows
         Position.X = 45.000000000000000000
       end
     end
-    inherited CubeOrigin: TLayout [1]
-    end
-    inherited PlacerPanel: TLayout [2]
-    end
-    inherited BG: TImage [3]
-      MultiResBitmap.Height = 1080
-      MultiResBitmap.Width = 564
-      BitmapMargins.Top = -10.000000000000000000
-      Scale.Y = 1.500000000000000000
-    end
   end
-  inherited DownMenu: TLayout [2]
-  end
-  inherited MainMenu: TLayout [3]
+  inherited MainMenu: TLayout
     inherited StartButton: TButton
       ImageIndex = 0
     end
@@ -37,7 +29,7 @@ inherited Form2_Windows: TForm2_Windows
       end
     end
   end
-  inherited PrepairLayout: TLayout [4]
+  inherited PrepairLayout: TLayout
     inherited BuyPanel: TImage
       MultiResBitmap.Height = 1080
       MultiResBitmap.Width = 1920
@@ -50,11 +42,5 @@ inherited Form2_Windows: TForm2_Windows
       MultiResBitmap.Height = 1080
       MultiResBitmap.Width = 1920
     end
-  end
-  inherited WinPanel: TPanel [5]
-  end
-  inherited Audio: TLayout [6]
-  end
-  inherited Map: TLayout [7]
   end
 end
