--- a/Window.Windows.fmx
+++ b/Window.Windows.fmx
@@ -17,27 +17,7 @@ inherited Form2_Windows: TForm2_Windows
     end
   end
   inherited DownMenu: TLayout
-    inherited SkipRound: TButton [0]
-    end
-    inherited PlayerIndicator: TImage [1]
-    end
-    inherited RoundPrefix: TLabel [2]
-    end
-    inherited RoundText: TLabel [3]
-    end
-    inherited ActionsPrefix: TLabel [4]
-    end
-    inherited ActionsText: TLabel [5]
-    end
-    inherited MoneyPrefix: TLabel [6]
-    end
-    inherited MoneyText: TLabel [7]
-    end
-    inherited MenuExitButton: TButton [8]
-    end
-    inherited ExitBar: TProgressBar [9]
-    end
-    inherited DownBG: TImage [10]
+    inherited DownBG: TImage
       MultiResBitmap.Height = 1080
       MultiResBitmap.Width = 1920
     end
